<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollview"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="none"
	>
	<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<TextView
	android:id="@+id/headuploatText"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/firstStep"
	/>
	<ImageView
    	android:id="@+id/headImage" 
        android:layout_width="160dip" 
        android:layout_gravity="center"
        android:layout_height="150dip" 
        />
	<TextView
    	android:id="@+id/bodyCreateText"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/secondStep"
    	/>
    <ImageView
    	android:id="@+id/bodyImage" 
        android:layout_width="160dip"
        android:layout_gravity="center" 
        android:layout_height="310dip"
        />
     <TextView
    	android:id="@+id/nameCreateText"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/thirdStep"
    	/>
    <EditText
    	android:id="@+id/nameEditText"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/nameHint"
    	/>
    
   		
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_marginTop="30dp"
    	>
    <Button
    	android:id="@+id/buttonOK"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/buttonOK"
    	/>
    <Button
    	android:id="@+id/buttonCancel"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/buttonCancel"
    	/>
    </LinearLayout>
	</LinearLayout>
	
</ScrollView>
